# uvm_pygen

./: .gitignore  CHANGELOG.md  README.md  TODO  config_dual.yaml  config_dut.yaml  config_fifo.yaml  config_single.yaml  config_timer.yaml  config_unified.yaml  config_uvm.yaml  main.py  pyproject.toml  reference_model.md  wlftgk7xnh
BC/: config.yaml  env.sv  pyproject.toml
docs/: doc.md
docs/BC/: env.sv.j2  main.py
docs/uvm_components/: uvm_agent.md
uvm_pygen/: __init__.py  loader.py
uvm_pygen/constants/: cache_enum.py  config_alliases.py  uvm_enum.py
uvm_pygen/models/config_schema/: config_layout.py  dut_dataclass.py  resolved_configs.py  uvm_dataclass.py
uvm_pygen/models/dut/: dut_config.py  dut_dataclass.py
uvm_pygen/models/generation/: agent_model.py  env_model.py  file_spec.py  registry.py
uvm_pygen/models/logic_schema/: agent_model.py  env_model.py  interface_model.py  reference_model.py  scoreboard_model.py  sequence_model.py  transaction_model.py
uvm_pygen/models/utils/: file_spec.py  util_annotation.py
uvm_pygen/models/uvm/: uvm_config.py  uvm_dataclass.py
uvm_pygen/services/: loader.py
uvm_pygen/services/config_parser/: base_config.py  config_cache.py  config_loader.py  config_resolver.py  dut_config.py  uvm_config.py
uvm_pygen/services/generation/: file_manager.py  generator.py  renderer.py  uvm_generator.py
uvm_pygen/services/model_builder/: model_builder.py
uvm_pygen/services/utils/: logger.py  parser.py  settings_manager.py
uvm_pygen/templates/: sim.tcl.j2
uvm_pygen/templates/common/: env.sv.j2  env_pkg.sv.j2  top.sv.j2  (+3 more)
(+29 files in other folders)
